--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
@@ -63,9 +64,9 @@
       <div class="intro-body">
         <div class="container">
           <div class="row">
-            <div class="col-lg-8 mx-auto">
+            <div class="col-lg-10 mx-auto">
               <h1 class="brand-heading">Evan Sondgerath</h1>
-              <p class="intro-text">Junior Javascript Developer</p>
+              <p class="intro-text">Junior Web Developer</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-codepen animated"></i>
               </a>
@@ -82,7 +83,7 @@
                 <i class="fa fa-github animated"></i>
               </a>
               <a href="#contact" class="btn btn-circle js-scroll-trigger">
-                <i class="fa fa-linkedin animated"></i>
+                <i class="fa fa-html5 animated"></i>
               </a>
             </div>
           </div>
@@ -102,13 +103,29 @@
       </div>
     </section>
 
+    <!-- <section id="apBreak" class="text-center">
+      <div class="container">
+      </div>
+    </section> -->
+
+    <!-- Projects -->
+    <section id="projects" class="content-section text-center">
+      <div class="container">
+        <div class="col-lg-8 mx-auto">
+          <h2>Projects</h2>
+          <p>Projects Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed egestas urna. Fusce eget convallis sem. In sed velit massa. Nam posuere sit amet massa venenatis sodales. Nullam vel purus leo. Nullam non nisl eu eros finibus facilisis. Sed nec auctor nisl, ac aliquam nunc.</p>
+
+        </div>
+      </div>
+    </section>
+
     <!-- Download Section -->
     <section id="download" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>Resume</h2>
           <p>Resume Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed egestas urna. Fusce eget convallis sem. In sed velit massa. Nam posuere sit amet massa venenatis sodales. Nullam vel purus leo. Nullam non nisl eu eros finibus facilisis. Sed nec auctor nisl, ac aliquam nunc.</p>
-          <a href="test.com" class="btn btn-default btn-lg">Visit Download Page</a>
+          <a href="test.com" class="btn btn-default btn-lg">Download</a>
         </div>
       </div>
     </section>
@@ -120,14 +137,10 @@
           <div class="col-lg-8 mx-auto">
             <h2>Contact</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed egestas urna. Fusce eget convallis sem. In sed velit massa. Nam posuere sit amet massa venenatis sodales. Nullam vel purus leo. Nullam non nisl eu eros finibus facilisis. Sed nec auctor nisl, ac aliquam nunc.</p>
-
           </div>
         </div>
       </div>
     </section>
-
-    <!-- Map Section -->
-    <!-- <div id="map"></div> -->
 
     <!-- Footer -->
     <footer>
@@ -156,18 +169,14 @@
       </div>
     </footer>
 
-    <!-- Bootstrap core JavaScript -->
+    <!-- Bootstrap -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Plugin JavaScript -->
+    <!-- JS Transition Plugin -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/grayscale.min.js"></script>
+    <script src="js/portfolio.js"></script>
 
   </body>
 
