--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="row">
             <div class="col-lg-10 mx-auto">
               <h1 class="brand-heading">Evan Sondgerath</h1>
-              <p class="intro-text">Junior Web Developer</p>
+              <p class="intro-text">Web Developer</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-codepen animated"></i>
               </a>
@@ -130,13 +130,60 @@
       </div>
     </section>
 
+  </br>
+</br>
+</br>
+
+    <!-- Contact Form Section -->
+    <section id="contact-us" class="section-padding">
+        <div class="container text-center">
+            <h2 class="mb-60">Contact Me</h2>
+            <div class="row">
+                <div class="col-md-12">
+                    
+                <!-- <form action="https://formspree.io/your@email.com" method="POST">
+                  <input type="text" name="name">
+                  <input type="email" name="_replyto">
+                  <input type="submit" value="Send">
+                </form> -->  
+
+                <form action="https://formspree.io/esondgerath@gmail.com" method="POST">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Your Name" id="name" required="" data-validation-required-message="Please enter your name" name="name"> 
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" placeholder="Your Email" id="email" required="" data-validation-required-message="Please enter your email" name="_replyto"> 
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="form-group">
+                            <textarea class="form-control" rows="7" placeholder="Your Message" id="message" required="" data-validation-required-message="Please leave a message" name="message"></textarea>
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="text-center">
+                        <div id="success"></div>
+                            <button type="submit" class="btn btn-lg btn-black"><i class="fa fa-envelope" aria-hidden="true"> Submit</i></button>
+                    </div>
+                </form>
+                </div>
+            </div>
+            <!-- End Contact form -->
+
+        </div>
+    </section>
+    <!-- End Contact Form Section -->
+
     <!-- Contact Section -->
     <section id="contact" class="content-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Contact</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed egestas urna. Fusce eget convallis sem. In sed velit massa. Nam posuere sit amet massa venenatis sodales. Nullam vel purus leo. Nullam non nisl eu eros finibus facilisis. Sed nec auctor nisl, ac aliquam nunc.</p>
+            <form action="https://formspree.io/your@email.com" method="POST">
+              <input type="text" name="name">
+              <input type="email" name="_replyto">
+              <input type="submit" value="Send">
+            </form>
           </div>
         </div>
       </div>
