--- a/index.html
+++ b/index.html
@@ -43,14 +43,20 @@
               </a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#projects">
+                <i class="navbar-icon fa fa-code animated"></i>
+                Projects
+              </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#download">
-                <i class="fa fa-code animated"></i>
-                Skills
+                <i class="navbar-icon fa fa-file animated"></i>
+                Resume
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">
-                <i class="fa fa-user-circle animated"></i>
+                <i class="navbar-icon fa fa-user-circle animated"></i>
                 Contact
               </a>
             </li>
@@ -67,21 +73,13 @@
             <div class="col-lg-10 mx-auto">
               <h1 class="brand-heading">Evan Sondgerath</h1>
               <p class="intro-text">Web Developer</p>
-              <a href="#about" class="btn btn-circle js-scroll-trigger">
-                <i class="fa fa-codepen animated"></i>
               </a>
               <a href="#skills" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-css3 animated"></i>
               </a>
-              <a href="#contact" class="btn btn-circle js-scroll-trigger">
+              <!-- <a href="#contact" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-gears animated"></i>
-              </a>
-              <a href="#contact" class="btn btn-circle js-scroll-trigger">
-                <i class="fa fa-download animated"></i>
-              </a>
-              <a href="#contact" class="btn btn-circle js-scroll-trigger">
-                <i class="fa fa-github animated"></i>
-              </a>
+              </a> -->
               <a href="#contact" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-html5 animated"></i>
               </a>
@@ -96,9 +94,9 @@
       <div class="container">
         <h2>About Me</h2>
         <div class="row">
-          <p class="col-md-4 mb-sm-30">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed egestas urna. Fusce eget convallis sem. In sed velit massa. Nam posuere sit amet massa venenatis sodales. Nullam vel purus leo. Nullam non nisl eu eros finibus facilisis. Sed nec auctor nisl, ac aliquam nunc.</p>
-          <p class="col-md-4 mb-sm-30">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed egestas urna. Fusce eget convallis sem. In sed velit massa. Nam posuere sit amet massa venenatis sodales. Nullam vel purus leo. Nullam non nisl eu eros finibus facilisis. Sed nec auctor nisl, ac aliquam nunc.</p>
-          <p class="col-md-4 mb-sm-30">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed egestas urna. Fusce eget convallis sem. In sed velit massa. Nam posuere sit amet massa venenatis sodales. Nullam vel purus leo. Nullam non nisl eu eros finibus facilisis. Sed nec auctor nisl, ac aliquam nunc.</p>
+          <p class="col-md-4 mb-sm-30">Hello, my name is Evan Sondgerath, and I am a Javascript student at Eleven Fifty Academy. I am a passionate developer who loves a challenge.</p>
+          <p class="col-md-4 mb-sm-30">Coding has been in my life since I was a teenager, working on game modding teams before dabbling in website development and simple javascripts to run personal projects.</p>
+          <p class="col-md-4 mb-sm-30">I look forward to furthering my development in web design, software engineering, and game design, and relish the chance to supplement my training with professional experience making client and customer-focused applications.</p>
         </div>
       </div>
     </section>
@@ -109,7 +107,7 @@
     </section> -->
 
     <!-- Projects -->
-    <section id="projects" class="content-section text-center">
+    <!-- <section id="projects" class="content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>Projects</h2>
@@ -117,15 +115,43 @@
 
         </div>
       </div>
-    </section>
+    </section> -->
+
+    <section id="projects" class="content-section text-center">
+        <div class="container">
+          <h2>Projects</h2>
+          <div class="row">
+            <p class="col-md-6 mb-sm-30">
+              <a target="_blank" href="https://codepen.io/evansondgerath/pen/yjqxQG">
+                <img src="./img/Codepen.png" alt="Codepen" style="width:250px">
+              </a>
+            </p>
+            <p class="col-md-6 mb-sm-30">
+                <a target="_blank" href="https://esondgerath.github.io/storeFront/">
+                  <img src="./img/6berries.jpg" alt="Very Berry" style="width:250px">
+                </a>
+            </p>
+            <!-- <p class="col-md-4 mb-sm-30">
+                <a target="_blank" href="https://codepen.io/evansondgerath/pen/yjqxQG">
+                  <img src="./img/codepen.png" alt="Codepen" style="width:200px">
+                </a>
+            </p> -->
+          </div>
+        </div>
+      </section>
+
+    </br>
+    </br>
+    </br>
 
     <!-- Download Section -->
     <section id="download" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>Resume</h2>
-          <p>Resume Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed egestas urna. Fusce eget convallis sem. In sed velit massa. Nam posuere sit amet massa venenatis sodales. Nullam vel purus leo. Nullam non nisl eu eros finibus facilisis. Sed nec auctor nisl, ac aliquam nunc.</p>
-          <a href="test.com" class="btn btn-default btn-lg">Download</a>
+          <h6>Interested In Learning More About Me?</h6>
+          <p>Here you can view or download my resume, and further information can be found on my LinkedIn and Github profiles, which you can find at the bottom of the page.</p>
+          <a href="https://drive.google.com/file/d/0By-_aT9IbkwjUHNHcnFrcEVjdzZPZllEM2llcUlmSkx4eC04/view?usp=sharing" class="btn btn-circle js-scroll-trigger"><i class="fa fa-download animated"></i></a>
         </div>
       </div>
     </section>
@@ -135,7 +161,7 @@
     </br>
 
     <!-- Contact Form Section -->
-    <section id="contact-us" class="section-padding">
+    <section id="contact" class="section-padding">
         <div class="container text-center">
             <h2 class="mb-60">Contact Me</h2>
             <div class="row">
@@ -161,7 +187,7 @@
                         <p class="help-block text-danger"></p>
                     </div>
                     <div class="text-center">
-                        <div id="success"></div>
+                        <div id="Submit Button'/78/9*-"></div>
                             <button type="submit" class="btn btn-lg btn-black"><i class="fa fa-envelope" aria-hidden="true"> Submit</i></button>
                     </div>
                 </form>
@@ -178,16 +204,22 @@
       <div class="container text-center">
         <ul class="list-inline banner-social-buttons">
             <li class="list-inline-item">
-              <a href="test.com" class="btn btn-default btn-lg">
+              <a href="https://www.linkedin.com/in/evan-sondgerath-a7802961" class="btn btn-default btn-lg">
                 <i class="fa fa-linkedin fa-fw"></i>
                 <span class="network-name">LinkedIn</span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="test.com" class="btn btn-default btn-lg">
+              <a href="https://github.com/ESondgerath" class="btn btn-default btn-lg">
                 <i class="fa fa-github fa-fw"></i>
                 <span class="network-name">Github</span>
               </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://codepen.io/evansondgerath/pen/yjqxQG" class="btn btn-default btn-lg">
+                <i class="fa fa-codepen animated"></i>
+                <span class-"network-name">Codepen</span>
+                </a>
             </li>
             <!-- <li class="list-inline-item">
               <a href="test.com" class="btn btn-default btn-lg">
