--- a/index.html
+++ b/index.html
@@ -121,21 +121,21 @@
         <div class="container">
           <h2>Projects</h2>
           <div class="row">
-            <p class="col-md-6 mb-sm-30">
+            <p class="col-md-4 mb-sm-30">
               <a target="_blank" href="https://codepen.io/evansondgerath/pen/yjqxQG">
                 <img src="./img/Codepen.png" alt="Codepen" style="width:250px">
               </a>
             </p>
-            <p class="col-md-6 mb-sm-30">
+            <p class="col-md-4 mb-sm-30">
                 <a target="_blank" href="https://esondgerath.github.io/storeFront/">
                   <img src="./img/6berries.jpg" alt="Very Berry" style="width:250px">
                 </a>
             </p>
-            <!-- <p class="col-md-4 mb-sm-30">
-                <a target="_blank" href="https://codepen.io/evansondgerath/pen/yjqxQG">
-                  <img src="./img/codepen.png" alt="Codepen" style="width:200px">
+            <p class="col-md-4 mb-sm-30">
+                <a target="_blank" href="https://docs.google.com/spreadsheets/d/1BjsWKffGGYZ2fN1iHTnJnZgeSVepY1obVv8Ut9fZidM/edit#gid=1">
+                  <img src="./img/SRI.png" alt="SRI Data Center" style="width:250px">
                 </a>
-            </p> -->
+            </p>
           </div>
         </div>
       </section>
