--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
           <div class="row">
             <p class="col-md-4 mb-sm-30">
               <a target="_blank" href="https://codepen.io/evansondgerath/pen/yjqxQG">
-                <img src="./img/codepen.png" alt="Codepen" style="width:250px">
+                <img src="./img/codepen.png" class="image" alt="Codepen" style="width:250px">
               </a>
             </p>
             <p class="col-md-4 mb-sm-30">
               <a target="_blank" href="https://esondgerath.github.io/storeFront/">
-                <img src="./img/6berries.jpg" alt="Very Berry" style="width:250px">
+                <img src="./img/6berries.jpg" class="image" alt="Very Berry" style="width:250px">
               </a>
             </p>
             <p class="col-md-4 mb-sm-30">
