--- a/index.html
+++ b/index.html
@@ -26,210 +26,213 @@
 
   <body id="page-top">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Evan Sondgerath</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">
-                <i class="navbar-icon fa fa-address-card animated"></i>
-                About
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects">
-                <i class="navbar-icon fa fa-code animated"></i>
-                Projects
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">
-                <i class="navbar-icon fa fa-file animated"></i>
-                Resume
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">
-                <i class="navbar-icon fa fa-user-circle animated"></i>
-                Contact
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Intro Header -->
-    <header class="masthead">
-      <div class="intro-body">
+      <!-- Navigation -->
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-10 mx-auto">
-              <h1 class="brand-heading">Evan Sondgerath</h1>
-              <p class="intro-text">Web Developer</p>
-              </a>
-              <a href="#skills" class="btn btn-circle js-scroll-trigger">
-                <i class="fa fa-css3 animated"></i>
-              </a>
-              <!-- <a href="#contact" class="btn btn-circle js-scroll-trigger">
-                <i class="fa fa-gears animated"></i>
-              </a> -->
-              <a href="#contact" class="btn btn-circle js-scroll-trigger">
-                <i class="fa fa-html5 animated"></i>
-              </a>
+          <a class="navbar-brand js-scroll-trigger" href="#page-top">Evan Sondgerath</a>
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            Menu
+            <i class="fa fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#about">
+                  <i class="navbar-icon fa fa-address-card animated"></i>
+                  About
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#projects">
+                  <i class="navbar-icon fa fa-code animated"></i>
+                  Projects
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#download">
+                  <i class="navbar-icon fa fa-file animated"></i>
+                  Resume
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#contact">
+                  <i class="navbar-icon fa fa-user-circle animated"></i>
+                  Contact
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <!-- Intro Header -->
+      <header class="masthead">
+        <div class="intro-body">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-10 mx-auto">
+                <h1 class="brand-heading">Evan Sondgerath</h1>
+                <p class="intro-text">Web Developer</p>
+                </a>
+                <a href="#skills" class="btn btn-circle js-scroll-trigger">
+                  <i class="fa fa-css3 animated"></i>
+                </a>
+                <!-- <a href="#contact" class="btn btn-circle js-scroll-trigger">
+                  <i class="fa fa-gears animated"></i>
+                </a> -->
+                <a href="#contact" class="btn btn-circle js-scroll-trigger">
+                  <i class="fa fa-html5 animated"></i>
+                </a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </header>
+      </header>
 
-    <!-- About Section -->
-    <section id="about" class="content-section text-center">
-      <div class="container">
-        <h2>About Me</h2>
-        <div class="row">
-          <p class="col-md-4 mb-sm-30">Hello, my name is Evan Sondgerath, and I am a Javascript student at Eleven Fifty Academy. I am a passionate developer who loves a challenge.</p>
-          <p class="col-md-4 mb-sm-30">Coding has been in my life since I was a teenager, working on game modding teams before dabbling in website development and simple javascripts to run personal projects.</p>
-          <p class="col-md-4 mb-sm-30">I look forward to furthering my development in web design, software engineering, and game design, and relish the chance to supplement my training with professional experience making client and customer-focused applications.</p>
-        </div>
-      </div>
-    </section>
+    <div class="page">
 
-    <!-- <section id="apBreak" class="text-center">
-      <div class="container">
-      </div>
-    </section> -->
-
-    <!-- Projects -->
-    <!-- <section id="projects" class="content-section text-center">
-      <div class="container">
-        <div class="col-lg-8 mx-auto">
-          <h2>Projects</h2>
-          <p>Projects Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed egestas urna. Fusce eget convallis sem. In sed velit massa. Nam posuere sit amet massa venenatis sodales. Nullam vel purus leo. Nullam non nisl eu eros finibus facilisis. Sed nec auctor nisl, ac aliquam nunc.</p>
-
-        </div>
-      </div>
-    </section> -->
-
-    <section id="projects" class="content-section text-center">
+      <!-- About Section -->
+      <section id="about" class="content-section text-center">
         <div class="container">
-          <h2>Projects</h2>
+          <h2>About Me</h2>
           <div class="row">
-            <p class="col-md-4 mb-sm-30">
-              <a target="_blank" href="https://codepen.io/evansondgerath/pen/yjqxQG">
-                <img src="./img/codepen.png" class="image" alt="Codepen" style="width:250px">
-              </a>
-            </p>
-            <p class="col-md-4 mb-sm-30">
-              <a target="_blank" href="https://esondgerath.github.io/storeFront/">
-                <img src="./img/6berries.jpg" class="image" alt="Very Berry" style="width:250px">
-              </a>
-            </p>
-            <p class="col-md-4 mb-sm-30">
-              <a target="_blank" href="https://docs.google.com/spreadsheets/d/1BjsWKffGGYZ2fN1iHTnJnZgeSVepY1obVv8Ut9fZidM/edit#gid=1">
-                <img src="./img/SRI.png" alt="SRI Data Center" style="width:250px">
-              </a>
-            </p>
+            <p class="col-md-4 mb-sm-30">Hello, my name is Evan Sondgerath, and I am a Javascript student at Eleven Fifty Academy. I am a passionate developer who loves a challenge.</p>
+            <p class="col-md-4 mb-sm-30">Coding has been in my life since I was a teenager, working on game modding teams before dabbling in website development and simple javascripts to run personal projects.</p>
+            <p class="col-md-4 mb-sm-30">I look forward to furthering my development in web design, software engineering, and game design, and relish the chance to supplement my training with professional experience making client and customer-focused applications.</p>
           </div>
         </div>
       </section>
 
-    </br>
-    </br>
-    </br>
-
-    <!-- Download Section -->
-    <section id="download" class="download-section content-section text-center">
-      <div class="container">
-        <div class="col-lg-8 mx-auto">
-          <h2>Resume</h2>
-          <h6>Interested In Learning More About Me?</h6>
-          <p>Here you can view or download my resume, and further information can be found on my LinkedIn and Github profiles, which you can find at the bottom of the page.</p>
-          <a href="https://drive.google.com/file/d/0By-_aT9IbkwjUHNHcnFrcEVjdzZPZllEM2llcUlmSkx4eC04/view?usp=sharing" class="btn btn-circle js-scroll-trigger"><i class="fa fa-download animated"></i></a>
+      <!-- <section id="apBreak" class="text-center">
+        <div class="container">
         </div>
-      </div>
-    </section>
+      </section> -->
 
-    </br>
-    </br>
-    </br>
+      <!-- Projects -->
+      <!-- <section id="projects" class="content-section text-center">
+        <div class="container">
+          <div class="col-lg-8 mx-auto">
+            <h2>Projects</h2>
+            <p>Projects Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed egestas urna. Fusce eget convallis sem. In sed velit massa. Nam posuere sit amet massa venenatis sodales. Nullam vel purus leo. Nullam non nisl eu eros finibus facilisis. Sed nec auctor nisl, ac aliquam nunc.</p>
 
-    <!-- Contact Form Section -->
-    <section id="contact" class="section-padding">
-        <div class="container text-center">
-            <h2 class="mb-60">Contact Me</h2>
+          </div>
+        </div>
+      </section> -->
+
+      <section id="projects" class="content-section text-center">
+          <div class="container">
+            <h2>Projects</h2>
             <div class="row">
-                <div class="col-md-12">
-                    
-                <!-- <form action="https://formspree.io/your@email.com" method="POST">
-                  <input type="text" name="name">
-                  <input type="email" name="_replyto">
-                  <input type="submit" value="Send">
-                </form> -->  
-
-                <form action="https://formspree.io/esondgerath@gmail.com" method="POST">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Your Name" id="name" required="" data-validation-required-message="Please enter your name" name="name"> 
-                        <p class="help-block text-danger"></p>
-                    </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Your Email" id="email" required="" data-validation-required-message="Please enter your email" name="_replyto"> 
-                        <p class="help-block text-danger"></p>
-                    </div>
-                    <div class="form-group">
-                            <textarea class="form-control" rows="7" placeholder="Your Message" id="message" required="" data-validation-required-message="Please leave a message" name="message"></textarea>
-                        <p class="help-block text-danger"></p>
-                    </div>
-                    <div class="text-center">
-                        <div id="Submit Button'/78/9*-"></div>
-                            <button type="submit" class="btn btn-lg btn-black"><i class="fa fa-envelope" aria-hidden="true"> Submit</i></button>
-                    </div>
-                </form>
-                </div>
-            </div>
-            <!-- End Contact form -->
-
-        </div>
-    </section>
-    <!-- End Contact Form Section -->
-
-    <!-- Footer -->
-    <footer>
-      <div class="container text-center">
-        <ul class="list-inline banner-social-buttons">
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/evan-sondgerath-a7802961" class="btn btn-default btn-lg">
-                <i class="fa fa-linkedin fa-fw"></i>
-                <span class="network-name">LinkedIn</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://github.com/ESondgerath" class="btn btn-default btn-lg">
-                <i class="fa fa-github fa-fw"></i>
-                <span class="network-name">Github</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://codepen.io/evansondgerath/pen/yjqxQG" class="btn btn-default btn-lg">
-                <i class="fa fa-codepen animated"></i>
-                <span class-"network-name">Codepen</span>
+              <p class="col-md-4 mb-sm-30">
+                <a target="_blank" href="https://codepen.io/evansondgerath/pen/yjqxQG">
+                  <img src="./img/codepen.png" class="image" alt="Codepen" style="width:250px">
                 </a>
-            </li>
-            <!-- <li class="list-inline-item">
-              <a href="test.com" class="btn btn-default btn-lg">
-                <i class="fa fa-google-plus fa-fw"></i>
-                <span class="network-name">Google+</span>
-              </a>
-            </li> -->
-          </ul>
-        <p>Copyright &copy; Evan Sondgerath 2018</p>
-      </div>
+              </p>
+              <p class="col-md-4 mb-sm-30">
+                <a target="_blank" href="https://esondgerath.github.io/storeFront/">
+                  <img src="./img/6berries.jpg" class="image" alt="Very Berry" style="width:250px">
+                </a>
+              </p>
+              <p class="col-md-4 mb-sm-30">
+                <a target="_blank" href="https://docs.google.com/spreadsheets/d/1BjsWKffGGYZ2fN1iHTnJnZgeSVepY1obVv8Ut9fZidM/edit#gid=1">
+                  <img src="./img/SRI.png" alt="SRI Data Center" style="width:250px">
+                </a>
+              </p>
+            </div>
+          </div>
+        </section>
+
+      </br>
+      </br>
+      </br>
+
+      <!-- Download Section -->
+      <section id="download" class="download-section content-section text-center">
+        <div class="container">
+          <div class="col-lg-8 mx-auto">
+            <h2>Resume</h2>
+            <h6>Interested In Learning More About Me?</h6>
+            <p>Here you can view or download my resume, and further information can be found on my LinkedIn and Github profiles, which you can find at the bottom of the page.</p>
+            <a href="https://drive.google.com/file/d/0By-_aT9IbkwjUHNHcnFrcEVjdzZPZllEM2llcUlmSkx4eC04/view?usp=sharing" class="btn btn-circle js-scroll-trigger"><i class="fa fa-download animated"></i></a>
+          </div>
+        </div>
+      </section>
+
+      </br>
+      </br>
+      </br>
+
+      <!-- Contact Form Section -->
+      <section id="contact" class="section-padding">
+          <div class="container text-center">
+              <h2 class="mb-60">Contact Me</h2>
+              <div class="row">
+                  <div class="col-md-12">
+                      
+                  <!-- <form action="https://formspree.io/your@email.com" method="POST">
+                    <input type="text" name="name">
+                    <input type="email" name="_replyto">
+                    <input type="submit" value="Send">
+                  </form> -->  
+
+                  <form action="https://formspree.io/esondgerath@gmail.com" method="POST">
+                      <div class="form-group">
+                          <input type="text" class="form-control" placeholder="Your Name" id="name" required="" data-validation-required-message="Please enter your name" name="name"> 
+                          <p class="help-block text-danger"></p>
+                      </div>
+                      <div class="form-group">
+                          <input type="email" class="form-control" placeholder="Your Email" id="email" required="" data-validation-required-message="Please enter your email" name="_replyto"> 
+                          <p class="help-block text-danger"></p>
+                      </div>
+                      <div class="form-group">
+                              <textarea class="form-control" rows="7" placeholder="Your Message" id="message" required="" data-validation-required-message="Please leave a message" name="message"></textarea>
+                          <p class="help-block text-danger"></p>
+                      </div>
+                      <div class="text-center">
+                          <div id="Submit Button'/78/9*-"></div>
+                              <button type="submit" class="btn btn-lg btn-black"><i class="fa fa-envelope" aria-hidden="true"> Submit</i></button>
+                      </div>
+                  </form>
+                  </div>
+              </div>
+              <!-- End Contact form -->
+
+          </div>
+      </section>
+      <!-- End Contact Form Section -->
+
+      <!-- Footer -->
+      <footer>
+        <div class="container text-center">
+          <ul class="list-inline banner-social-buttons">
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/evan-sondgerath-a7802961" class="btn btn-default btn-lg">
+                  <i class="fa fa-linkedin fa-fw"></i>
+                  <span class="network-name">LinkedIn</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/ESondgerath" class="btn btn-default btn-lg">
+                  <i class="fa fa-github fa-fw"></i>
+                  <span class="network-name">Github</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://codepen.io/evansondgerath/pen/yjqxQG" class="btn btn-default btn-lg">
+                  <i class="fa fa-codepen animated"></i>
+                  <span class-"network-name">Codepen</span>
+                  </a>
+              </li>
+              <!-- <li class="list-inline-item">
+                <a href="test.com" class="btn btn-default btn-lg">
+                  <i class="fa fa-google-plus fa-fw"></i>
+                  <span class="network-name">Google+</span>
+                </a>
+              </li> -->
+            </ul>
+          <p>Copyright &copy; Evan Sondgerath 2018</p>
+        </div>
+    </div>
     </footer>
 
     <!-- Bootstrap -->
