--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                 </a>
               </p>
               <p class="col-md-4 mb-sm-30">
-                <a target="_blank" href="https://docs.google.com/spreadsheets/d/1BjsWKffGGYZ2fN1iHTnJnZgeSVepY1obVv8Ut9fZidM/edit#gid=1">
-                  <img src="./img/SRI.png" alt="SRI Data Center" style="width:250px">
+                <a target="_blank" href="../apiProject/index.html">
+                  <img src="../apiProject/Assets/deathStar.jpg" alt="SRI Data Center" style="width:250px">
                 </a>
               </p>
             </div>
@@ -213,7 +213,7 @@
               </li>
               <li class="list-inline-item">
                 <a href="https://github.com/ESondgerath" class="btn btn-default btn-lg">
-                  <i class="fa fa-github fa-fw"></i>
+                  <i class="fa fa-github fa-fw" style="color-``"  ></i>
                   <span class="network-name">Github</span>
                 </a>
               </li>
