--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
           <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/evan-sondgerath-a7802961" class="btn btn-default btn-lg">
-                  <i class="fa fa-linkedin fa-fw"></i>
+                  <i class="fa fa-linkedin fa-fw animated"></i>
                   <span class="network-name">LinkedIn</span>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="https://github.com/ESondgerath" class="btn btn-default btn-lg">
-                  <i class="fa fa-github fa-fw" style="color-``"  ></i>
+                  <i class="fa fa-github fa-fw animated"></i>
                   <span class="network-name">Github</span>
                 </a>
               </li>
